# AskonDataManager

./: .gitignore  generate-all-projects.bat  readme.txt
askon-data-clustering/Release/: process.yaml
askon-data-clustering/src/: CMakeLists.txt  data-definition.h  data-manager.cpp  data-type.h  field-mapping.h  field.h  file-definition.h  file-format.h  index-definition.cpp  index-definition.h  job-definition.cpp  job-definition.h  job-type.h  key-field.h  key-level.h  match-level.h  match-type.h  matching-definition.h  matching-field.h  merge-heap-node.cpp  merge-heap-node.h  process.cpp  process.h  search-level.h  sort-order.h  string-util.cpp  transformation-definition.cpp  transformation-definition.h  util.cpp  util.h
askon-matching-test/: CMakeLists.txt  matching-test.cpp
askon-matching/src/: CMakeLists.txt  damerau-levenshtein-distance.cpp  damerau-levenshtein-distance.h  dictionary-txt.cpp  dictionary-txt.h  dictionary.cpp  dictionary.h  key-generator.cpp  key-generator.h  matching-algorithms.cpp  matching-algorithms.h  parser.cpp  parser.h  phrase.cpp  phrase.h  standardization-rule.cpp  standardization-rule.h  word-frequency-definition.cpp  word-frequency-definition.h  word.cpp  word.h
askon-util/src/: CMakeLists.txt  delimiter.h  string-util.cpp  string-util.h  util.cpp
dictionary/: company_names.txt  firma adı.txt  mandatory_match_words.txt  person_names.txt  phrases.txt  scoring_definitions.txt  standardization_rules.txt  standardization_rules_simple.txt  surnames.txt
libyamlc/src/: CMakeLists.txt  api.c  yaml.h
